--- a/style.css
+++ b/style.css
@@ -1,31 +1,27 @@
-@media(max-width:340px){
-    .zom{
-        width: 100%;
 
-    }
-    .logo{
-        width: 40px;
-        height: 30px;
-    }
-    
 
-}
-
-@media(max-width:420px){
+@media(max-width:400px){
     .zom{
         width: 100%;
         height: 15px;
     }
     .logo{
-        width: 50px;
+        width: 120px;
         height: 30px;
-        margin-top: 3px;
+        margin-top: 10px;
       
     }
+    .icon{
+        position: absolute;
+        left: 85px;
+        margin-top: 3px;
+        
+    }
     .search{
-        width:140px ;
+        width:180px ;
         border-radius: 8px;
         height: 20px;
+        position: relative;
     }
     
     .search-container{
@@ -38,15 +34,19 @@
     .log{
         width: 50px;
         font-size: 10px;
-        padding: none;
-        margin: none;
         background-color: white;
         border: none;
         color: lightgray;
         font-size: 10px;
+        margin-right: 5px;
     }
     .start{
+        border: 1px solid white;
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 330px;
+        border: 1px solid;
         gap: 5px;
     }
     .para{
