--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
 @media(max-width:400px){
     .zom{
         width: 100%;
-        height: 20px;
+        height:18px;
     }
     .logo{
-        width: 190px;
+        width: 200px;
         height: 30px;
         margin-top: 10px;
       
@@ -19,6 +19,7 @@
     }
     .search{
         width:180px ;
+        
         border-radius: 8px;
         height: 30px;
         position: relative;
@@ -41,17 +42,64 @@
         margin-right: 5px;
     }
     .start{
-        border: 1px solid white;
+        
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 330px;
-        border: 1px solid;
+        
         gap: 5px;
     }
     .para{
-        font-size: 8px;
+        font-size: 13px;
     }
+    .deliverypic{
+        
+        padding: 8px;
+        width: 25px;
+        clip-path: circle();
+        background-color: #FCEEC0;
+    }
+    .deltext{
+        font-size: 11px;
+    }
+    .delivery{
+        display: flex;
+        
+    }
+    .diningpic{
+        
+        padding: 8px;
+        width: 25px;
+        clip-path: circle();
+        background-color: #FCEEC0;
+    }
+    .dintext{
+        font-size: 11px;
+    }
+    .dining{
+        display: flex;
+        
+    }
+    .nightpic{
+        
+        padding: 8px;
+        width: 25px;
+        clip-path: circle();
+        background-color: #FCEEC0;
+    }
+    .nighttext{
+        font-size: 11px;
+    }
+    .night{
+        display: flex;
+        
+    }
+    .start1{
+        display: flex;
+        gap: 5px;
+    }
+
 
     
 
