--- a/style.css
+++ b/style.css
@@ -172,11 +172,13 @@
         
     }
     .start5{
-        width: 310px;
+        width: 330px;
         position: relative;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
     .start51{
-        width: 340px;
+        width: 330px;
         position: relative;
         margin-top: 10px;
         margin-bottom: 10px;
